create: style for navbar bottom

--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
           </a>
           <!-- /.user -->
         </div>
-        <!-- /.navbar-top -->
-
-        <nav class="navigation">
+        <!-- /.navbar-top -->       
+      </div>
+      <!-- /.container -->
+      <nav class="navigation navbar-bottom">
+        <div class="container">
           <ul class="navbar-menu">
             <li class="navbar-menu__item">
               <a href="#" class="navbar-menu__link">All Deals</a>
@@ -67,10 +69,10 @@
             </li>
           </ul>
           <!-- /.navbar-menu -->
-        </nav>
-        <!-- /.navigation -->       
-      </div>
-      <!-- /.container -->
+        </div>
+        <!-- /.container -->
+      </nav>
+      <!-- /.navigation --> 
     </header>
   </body>
 </html>
