--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
                 <img src="img/star.svg" alt="star">
               </div>
               <!-- /.stars -->
-              <h1 class="hotel-name">Grand Hilton Hotel</h1>
+              <h1 class="hotel-name hotel-info__name">Grand Hilton Hotel</h1>
               <span class="offer hotel-info__offer">Flash Offer</span>
             </div>
             <!-- /.hotel-wrapper -->
-            <p class="hotel-description">Half-Board / All Inclusive + Complimentary Activities + Child Stays Free</p>
+            <p class="hotel-description hotel-info__description">Half-Board / All Inclusive + Complimentary Activities + Child Stays Free</p>
           </div>
           <!-- /.hotel-info__text -->
           <div class="rating hotel-info__rating">
