fix: swiper slider

--- a/index.html
+++ b/index.html
@@ -134,10 +134,16 @@
                   <img src="img/slide-1.jpg" alt="Slide">
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-1.jpg" alt="Slide">
+                  <img src="img/slide-2.jpg" alt="Slide">
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-1.jpg" alt="Slide">
+                  <img src="img/slide-3.jpg" alt="Slide">
+                </div>
+                <div class="swiper-slide">
+                  <img src="img/slide-4.jpg" alt="Slide">
+                </div>
+                <div class="swiper-slide">
+                  <img src="img/slide-5.jpg" alt="Slide">
                 </div>
               </div>
               
