--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Best Tour Plan - Hotel Booking</title>
+    <!-- <link rel="icon" href="https://yasnikowa.ru/tour-plan/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://yasnikowa.ru/tour-plan/favicon.ico" type="image/x-icon"> -->
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;600;800&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -14,7 +17,7 @@
     <header class="navbar">
       <div class="container">
         <div class="navbar-top">
-          <a href="#" class="logo">
+          <a href="index.html" class="logo">
             <img
               src="img/horizontal-logo.svg"
               alt="Logo: Best Tour Plan"
@@ -154,6 +157,51 @@
             <!-- /.swiper-container -->
           </div>
           <!-- /.slider -->
+
+          <div class="hotel-about">
+            <div class="booking">
+              <div class="booking__info">
+                <div class="booking__price">
+                  <span class="booking__start">price starts as</span>
+                  <strong class="booking__pricetag">$ 8,500</strong>
+                  <span class="booking__per-room">per room / night</span>
+                </div>
+                <!-- /.booking__price -->
+                <div class="booking__room">
+                  <div class="booking__text">
+                    <img src="img/user.svg" alt="Icon: user" class="booking__icon">
+                    <span class="booking__description">2 x Guests</span>
+                  </div>
+                  <div class="booking__text">
+                    <img src="img/home.svg" alt="Icon: home" class="booking__icon">
+                    <span class="booking__description">1 x Room</span>
+                  </div>
+                </div>
+                <!-- /.booking__room -->
+              </div>
+              <!-- /.booking__info -->
+              <div class="booking__call-center">
+                <span class="booking__heading">Quick Booking</span>
+                <a href="tel:12100" class="booking__number">
+                  <img src="img/phone-call.svg" alt="Icon: phone">
+                  <span class="booking__num">12100</span>
+                </a>
+              </div>
+              <!-- /.booking__call-center -->
+              <button class="booking__button">View Other Options</button>
+            </div>
+            <!-- /.booking -->
+            <div class="map">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.
+              0412632673433!2d98.29255281413307!3d7.890752094315353!2m3!1f0!2f0!3f0!3m2!
+              1i1024!2i768!4f13.1!3m3!1m2!1s0x30503b7bfcd9f903%3A0xf7065fac1e3d7c48!2sDoubleTree
+              %20by%20Hilton%20Phuket%20Banthai%20Resort!5e0!3m2!1sru!2sru!4v1615301520998!5m2!1sru!2sru"
+              width="347" height="213" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <!-- /.map -->
+          </div>
+          <!-- /.hotel-about -->
+
         </div>
         <!-- /.hotel-grid -->
       </div>
