--- a/index.html
+++ b/index.html
@@ -127,26 +127,26 @@
         </div>
         <!-- /.hotel-info -->
         <div class="hotel-grid">
-          <div class="slider">
+          <div class="slider hotel__slider">
             <!-- Slider main container -->
             <div class="swiper-container">
               <!-- Additional required wrapper -->
               <div class="swiper-wrapper">
                 <!-- Slides -->
                 <div class="swiper-slide">
-                  <img src="img/slide-1.jpg" alt="Slide">
+                  <img class="swiper-slide__image" src="img/slide-1.jpg" alt="Slide">
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-2.jpg" alt="Slide">
+                  <img class="swiper-slide__image" src="img/slide-2.jpg" alt="Slide">
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-3.jpg" alt="Slide">
+                  <img class="swiper-slide__image" src="img/slide-3.jpg" alt="Slide">
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-4.jpg" alt="Slide">
+                  <img class="swiper-slide__image" src="img/slide-4.jpg" alt="Slide">
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-5.jpg" alt="Slide">
+                  <img class="swiper-slide__image" src="img/slide-5.jpg" alt="Slide">
                 </div>
               </div>
               
@@ -196,7 +196,7 @@
               0412632673433!2d98.29255281413307!3d7.890752094315353!2m3!1f0!2f0!3f0!3m2!
               1i1024!2i768!4f13.1!3m3!1m2!1s0x30503b7bfcd9f903%3A0xf7065fac1e3d7c48!2sDoubleTree
               %20by%20Hilton%20Phuket%20Banthai%20Resort!5e0!3m2!1sru!2sru!4v1615301520998!5m2!1sru!2sru"
-              width="347" height="213" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              width="100%" height="213" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
             <!-- /.map -->
           </div>
