--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Best Tour Plan - Hotel Booking</title>
-    <!-- <link rel="icon" href="https://yasnikowa.ru/tour-plan/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="https://yasnikowa.ru/tour-plan/favicon.ico" type="image/x-icon"> -->
-
+    <link rel="icon" href="https://yasnikowa.ru/tour-plan/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://yasnikowa.ru/tour-plan/favicon.ico" type="image/x-icon">
+    
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;600;800&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
@@ -191,13 +191,7 @@
               <button class="booking__button">View Other Options</button>
             </div>
             <!-- /.booking -->
-            <div class="map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.
-              0412632673433!2d98.29255281413307!3d7.890752094315353!2m3!1f0!2f0!3f0!3m2!
-              1i1024!2i768!4f13.1!3m3!1m2!1s0x30503b7bfcd9f903%3A0xf7065fac1e3d7c48!2sDoubleTree
-              %20by%20Hilton%20Phuket%20Banthai%20Resort!5e0!3m2!1sru!2sru!4v1615301520998!5m2!1sru!2sru"
-              width="100%" height="213" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
+            <div id="map" class="map"></div>
             <!-- /.map -->
           </div>
           <!-- /.hotel-about -->
@@ -208,6 +202,8 @@
       <!-- /.container -->
     </section>
     <!-- /.hotel -->
+    
+    <script src="https://api-maps.yandex.ru/2.1/?lang=en_US" type="text/javascript"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
