--- a/index.html
+++ b/index.html
@@ -134,19 +134,19 @@
             <div class="swiper-container hotel-slider hotel__slider">  
               <div class="swiper-wrapper">    
                 <div class="swiper-slide hotel-slider__item">
-                  <img class="swiper-slide__image" src="img/slide-1.jpg" alt="Slide">
+                  <img class="hotel-slider__image" src="img/slide-1.jpg" alt="Slide">
                 </div>
                 <div class="swiper-slide hotel-slider__item">
-                  <img class="swiper-slide__image" src="img/slide-2.jpg" alt="Slide">
+                  <img class="hotel-slider__image" src="img/slide-2.jpg" alt="Slide">
                 </div>
                 <div class="swiper-slide hotel-slider__item">
-                  <img class="swiper-slide__image" src="img/slide-3.jpg" alt="Slide">
+                  <img class="hotel-slider__image" src="img/slide-3.jpg" alt="Slide">
                 </div>
                 <div class="swiper-slide hotel-slider__item">
-                  <img class="swiper-slide__image" src="img/slide-4.jpg" alt="Slide">
+                  <img class="hotel-slider__image" src="img/slide-4.jpg" alt="Slide">
                 </div>
                 <div class="swiper-slide hotel-slider__item">
-                  <img class="swiper-slide__image" src="img/slide-5.jpg" alt="Slide">
+                  <img class="hotel-slider__image" src="img/slide-5.jpg" alt="Slide">
                 </div>
               </div>         
               <button class="hotel-slider__button hotel-slider__button--prev"></button>
