--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="https://yasnikowa.ru/tour-plan/favicon.ico" type="image/x-icon">
     
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&family=Nunito:wght@400;600;800&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;400;600;700&family=Nunito:wght@400;600;800&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -286,6 +286,41 @@
       <!-- /.container -->
     </section>
     <!-- /.reviews -->
+
+    <section class="activities">
+      <div class="container">
+        <h2 class="activities__title">Other activities</h2>
+        <div class="activities-wrapper">
+          <div class="card activities__card">
+            <img src="img/activity-1.jpg" alt="The curious corner of chamarel" class="card__image">
+            <h3 class="card__title">The curious corner of&nbsp;chamarel</h3>
+            <button class="card__button">Book Now</button>
+          </div>
+          <!-- /.card -->
+          <div class="card activities__card">
+            <img src="img/activity-2.jpg" alt="Gymkhana club golf course" class="card__image">
+            <h3 class="card__title">Gymkhana club golf course</h3>
+            <button class="card__button">Book Now</button>
+          </div>
+          <!-- /.card -->
+          <div class="card activities__card">
+            <img src="img/activity-3.jpg" alt="Tamarind falls hiking trip - full day" class="card__image">
+            <h3 class="card__title">Tamarind falls hiking trip&nbsp;-&nbsp;full day</h3>
+            <button class="card__button">Book Now</button>
+          </div>
+          <!-- /.card -->
+          <div class="card activities__card">
+            <img src="img/activity-4.jpg" alt="The blue marine discovery quest" class="card__image">
+            <h3 class="card__title">The blue marine discovery quest</h3>
+            <button class="card__button">Book Now</button>
+          </div>
+          <!-- /.card -->
+        </div>
+        <!-- /.ativities-wrapper -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.activities -->
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/parallax.js"></script>
