--- a/index.html
+++ b/index.html
@@ -198,6 +198,245 @@
     </section>
     <!-- /.hotel -->
 
+
+    <section class="packages">
+      <div class="container">
+        <h2 class="packages__title">Other packages</h2>
+        <div class="packages-wrapper">
+          <div class="package packages__package">
+            
+            <div class="package-first__images">
+              <img src="img/hotel-1.jpg" alt="Hotel Blue Haven" class="package-first__image">
+              <span class="package-first__offer">Flash Offer</span>
+            </div>
+            <!-- /.package__image -->
+            <div class="package-first__info">
+              <div class="package__raiting">
+                <img src="img/star.svg" alt="star">
+                <img src="img/star.svg" alt="star">
+                <img src="img/star.svg" alt="star">
+                <img src="img/star.svg" alt="star">
+                <img src="img/star.svg" alt="star">
+              </div>
+              <span class="package__name">Hotel Blue Haven</span>
+              <p class="package__about">Aute quis duis excepteur excepteur 
+                ipsum cat eiusmod consectetur enim laborum magna llit. Ipsum 
+                est fugiat velit ea llamco do esse ut in veniam sun in onsequat. 
+                Aute quis duis epteur excepteur ipsum occaecat eiusmod nsectetur 
+                enim laborum magna mollit. Ipsum est fugiat velit ea ullamco do</p>
+              <div class="package__rooms">
+                <div class="package__text">
+                  <img src="img/map.svg" alt="Icon: map" class="package__icon">
+                  <span class="package__description">1749 Wheeler Ridge  Delaware</span>
+                </div>
+                <!-- /.package__text -->
+                <div class="package__text">
+                  <img src="img/user.svg" alt="Icon: user" class="package__icon">
+                  <span class="package__description">2 x Guests</span>
+                </div>
+                <!-- /.package__text -->
+                <div class="package__text">
+                  <img src="img/home.svg" alt="Icon: home" class="package__icon">
+                  <span class="package__description">1 x Room</span>
+                </div>
+                <!-- /.package__text -->
+              </div>
+              <!-- /.package__rooms -->
+              <div class="package__prices">
+                <div class="package__price">
+                  <span class="price-to">$ 10,500</span>
+                  <span class="price-after">$ 8,500</span>
+                </div>
+                <!-- /.package__price -->
+                <div class="package__buttons">
+                  <button class="package__button">Book Now</button>
+                </div>
+              </div>
+              <!-- /.package-prices -->
+            </div>
+            <!-- /.package__info -->
+          </div>
+          <!-- /.package -->
+
+          <div class="package packages__package">
+            <div class="package__images">
+              <img src="img/hotel-2.jpg" alt="LUX* Belle Mare" class="package__image">
+              <span class="package__offer">Flash Offer</span>
+            </div>
+            <!-- /.package__image -->
+            <div class="package__info">
+              <span class="package__name">LUX* Belle Mare</span>
+              <div class="package__rooms">
+                <div class="package__text">
+                  <img src="img/map.svg" alt="Icon: map" class="package__icon">
+                  <span class="package__description">1749 Wheeler Ridge  Delaware</span>
+                </div>
+                <!-- /.package__text -->
+                <div class="package__text">
+                  <img src="img/user.svg" alt="Icon: user" class="package__icon">
+                  <span class="package__description">2 x Guests</span>
+                </div>
+                <!-- /.package__text -->
+                <div class="package__text">
+                  <img src="img/home.svg" alt="Icon: home" class="package__icon">
+                  <span class="package__description">1 x Room</span>
+                </div>
+                <!-- /.package__text -->
+              </div>
+              <!-- /.packages__rooms -->
+              <div class="package__prices">
+                <div class="package__price">
+                  <span class="price-to">$ 8,500</span>
+                  <span class="price-after">$ 3,000</span>
+                </div>
+                <!-- /.package__price -->
+                <div class="package__buttons">
+                  <button class="package__button">Book Now</button>
+                </div>
+              </div>
+              <!-- /.package-prices -->
+            </div>
+            <!-- /.package__info -->
+          </div>
+          <!-- /.package -->
+
+          <div class="package packages__package">
+            <div class="package__images">
+              <img src="img/hotel-3.jpg" alt="White Palace" class="package__image">
+              <span class="package__offer">Flash Offer</span>
+            </div>
+            <!-- /.package__image -->
+            <div class="package__info">
+              <span class="package__name">White Palace</span>
+              <div class="package__rooms">
+                <div class="package__text">
+                  <img src="img/map.svg" alt="Icon: map" class="package__icon">
+                  <span class="package__description">1749 Wheeler Ridge  Delaware</span>
+                </div>
+                <!-- /.package__text -->
+                <div class="package__text">
+                  <img src="img/user.svg" alt="Icon: user" class="package__icon">
+                  <span class="package__description">2 x Guests</span>
+                </div>
+                <!-- /.package__text -->
+                <div class="package__text">
+                  <img src="img/home.svg" alt="Icon: home" class="package__icon">
+                  <span class="package__description">1 x Room</span>
+                </div>
+                <!-- /.package__text -->
+              </div>
+              <!-- /.package__rooms -->
+              <div class="package__prices">
+                <div class="package__price">
+                  <span class="price-to">$ 10,500</span>
+                  <span class="price-after">$ 9,500</span>
+                </div>
+                <!-- /.package__price -->
+                <div class="package__buttons">
+                  <button class="package__button">Book Now</button>
+                </div>
+              </div>
+              <!-- /.package-prices -->
+            </div>
+            <!-- /.package__info -->
+          </div>
+          <!-- /.package -->
+
+        <div class="package packages__package">
+          <div class="package__images">
+            <img src="img/hotel-4.jpg" alt="Luxury Place" class="package__image">
+            <span class="package__offer">Flash Offer</span>
+          </div>
+          <!-- /.package__image -->
+          <div class="package__info">
+            <span class="package__name">Luxury Place</span>
+
+            <div class="package__rooms">
+              <div class="package__text">
+                <img src="img/map.svg" alt="Icon: map" class="package__icon">
+                <span class="package__description">1749 Wheeler Ridge  Delaware</span>
+              </div>
+              <!-- /.package__text -->
+              <div class="package__text">
+                <img src="img/user.svg" alt="Icon: user" class="package__icon">
+                <span class="package__description">2 x Guests</span>
+              </div>
+              <!-- /.package__text -->
+              <div class="package__text">
+                <img src="img/home.svg" alt="Icon: home" class="package__icon">
+                <span class="package__description">1 x Room</span>
+              </div>
+              <!-- /.package__text -->
+            </div>
+            <!-- /.package__rooms -->
+            <div class="package__prices">
+              <div class="package__price">
+                <span class="price-to">$ 4,500</span>
+                <span class="price-after">$ 2,500</span>
+              </div>
+              <!-- /.package__price -->
+              <div class="package__buttons">
+                <button class="package__button">Book Now</button>
+              </div>
+            </div>
+            <!-- /.package-prices -->
+          </div>
+          <!-- /.package__info -->
+        </div>
+        <!-- /.package -->
+
+        <div class="package packages__package">
+          <div class="package__images">
+            <img src="img/hotel-5.jpg" alt="Hotel Five Star" class="package__image">
+            <span class="package__offer">Flash Offer</span>
+          </div>
+          <!-- /.package__image -->
+          <div class="package__info">
+            <span class="package__name">Hotel Five Star</span>
+
+            <div class="package__rooms">
+              <div class="package__text">
+                <img src="img/map.svg" alt="Icon: map" class="package__icon">
+                <span class="package__description">1749 Wheeler Ridge  Delaware</span>
+              </div>
+              <!-- /.package__text -->
+              <div class="package__text">
+                <img src="img/user.svg" alt="Icon: user" class="package__icon">
+                <span class="package__description">2 x Guests</span>
+              </div>
+              <!-- /.package__text -->
+              <div class="package__text">
+                <img src="img/home.svg" alt="Icon: home" class="package__icon">
+                <span class="package__description">1 x Room</span>
+              </div>
+              <!-- /.package__text -->
+            </div>
+            <!-- /.package__rooms -->
+
+            <div class="package__prices">
+              <div class="package__price">
+                <span class="price-to">$ 6,500</span>
+                <span class="price-after">$ 3,500</span>
+              </div>
+              <!-- /.package__price -->
+              <div class="package__buttons">
+                <button class="package__button">Book Now</button>
+              </div>
+            </div>
+            <!-- /.package-prices -->
+          </div>
+          <!-- /.package__info -->
+        </div>
+        <!-- /.package -->
+
+        </div>
+        <!-- /.packages-wrapper -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.packages -->
+
+
     <section class="newsletter" data-parallax="scroll" data-image-src="img/newsletter-bg.jpg">
       <div class="newsletter-wrapper">
         <h2 class="newsletter-title newsletter__title">subscribe to our 
