create: media for footer

--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
         <div class="footer-wrapper">
           <img src="img/vertical-logo.svg" alt="Logo: Best Tour Plan" class="logo footer__logo">
           <div class="footer__list footer__categories">
-            <h3 class="footer__title">All categories</h3>
+            <h3 class="footer__title footer__title-categories">All categories</h3>
             <ul class="footer__ul">
               <li class="footer__item">
                 <a href="#" class="footer__link">All Deals</a>
@@ -595,7 +595,7 @@
             </ul> 
           </div>
           <!-- /.footer__list -->
-          <div class="footer__list footer__additionat">
+          <div class="footer__list footer__additional">
             <h3 class="footer__title">Additional information</h3>
             <ul class="footer__ul">
               <li class="footer__item">
@@ -689,8 +689,11 @@
               <input type="text" class="input footer__input" placeholder="Your Full Name*">
               <input type="text" class="input footer__input" placeholder="Phone Number*">
               <textarea class="footer__message" placeholder="Message"></textarea>
-              <button class="footer__button">Send</button>
-              <span class="footer__info">* Required Fields</span>
+              <div class="footer__btr-info">
+                <button class="footer__button">Send</button>
+                <span class="footer__info">* Required Fields</span>
+              </div>
+              <!-- /.footer__btr-info -->
             </form>
           </div>
           <!-- /.footer__contact-form -->
