--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
 
-    <header class="navbar navbar__mobile_fixed">
+    <header class="navbar navbar_mobile_fixed">
       <div class="container">
         <div class="navbar-top">
           <a href="index.html" class="logo">
@@ -228,12 +228,12 @@
         <div class="packages-wrapper">
           <div class="package packages__package">
             
-            <div class="package-first__images">
-              <img src="img/hotel-1.jpg" alt="Hotel Blue Haven" class="package-first__image">
-              <span class="package-first__offer">Flash Offer</span>
+            <div class="package__images-first">
+              <img src="img/hotel-1.jpg" alt="Hotel Blue Haven" class="package__image-first">
+              <span class="package__offer-first">Flash Offer</span>
             </div>
             <!-- /.package__image -->
-            <div class="package-first__info">
+            <div class="package__info-first">
               <div class="package__raiting">
                 <img src="img/star.svg" alt="star">
                 <img src="img/star.svg" alt="star">
@@ -587,7 +587,9 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-wrapper">
-          <img src="img/vertical-logo.svg" alt="Logo: Best Tour Plan" class="logo footer__logo">
+          <a href="index.html" class="logo footer__logo">
+            <img src="img/vertical-logo.svg" alt="Logo: Best Tour Plan">
+          </a>
           <div class="footer__list footer__categories">
             <h3 class="footer__title footer__title-categories">All categories</h3>
             <ul class="footer__ul">
@@ -645,14 +647,14 @@
           <div class="footer__social-network">
             <h3 class="footer__title footer__title-social">Social network</h3>
             <div class="footer__social-links">
-              <div class="footer__link" href="#">
-                <img src="img/facebook.svg" alt="Icon: Facebook">
+              <div class="footer__link">
+                <a href="https://www.facebook.com/" target="_blank" class="footer__link-facebook"><img src="img/facebook.svg" alt="Icon: Facebook"></a>
               </div>
-              <div class="footer__link" href="#">
-                <img src="img/youtube.svg" alt="Icon: YouTube">
+              <div class="footer__link">
+                <a href="https://www.youtube.com/" target="_blank" class="footer__link-youtube"><img src="img/youtube.svg" alt="Icon: YouTube"></a>
               </div>
-              <div class="footer__link" href="#">
-                <img src="img/instagram.svg" alt="Icon: Instagram">
+              <div class="footer__link">
+                <a href="https://www.instagram.com/" target="_blank" class="footer__link-instagram"><img src="img/instagram.svg" alt="Icon: Instagram"></a>
               </div>
             </div>
             <!-- /.footer__social-links -->
@@ -692,16 +694,18 @@
                   <img class="footer__icon" src="img/contact-call.svg" alt="Icon: phone call">
                 </div>
                 <!-- /.footer__icon-wrapper -->
-                Tel (business hours) : 269 1500 <br>
-                Tel (hotline) Monday - Saturday: 52-56-61-38 (08:00 am – 20:00 pm) <br>
-                Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00 pm)
+                <div class="footer__tel">
+                Tel (business hours) : <a href="tel:2691500" class="footer__link">269 1500</a> <br>
+                Tel (hotline) Monday - Saturday: <a href="tel:52-56-61-38" class="footer__link">52-56-61-38</a> (08:00 am – 20:00 pm) <br>
+                Tel (hotline) Sunday: <a href="tel:52-56-61-38" class="footer__link">52-56-61-38</a> (08:00 am – 14:00 pm)
+                </div> 
               </li>
               <li class="footer__item footer__item-contact">
                 <div class="footer__icon-wrapper">
                   <img class="footer__icon" src="img/contact-email.svg" alt="Icon: email">
                 </div>
                 <!-- /.footer__icon-wrapper -->
-                cherly.lawson@example.com
+                <a href="mailto:cherly.lawson@example.com" class="footer__link">cherly.lawson@example.com</a>
               </li>
             </ul>
           </div>
